--- a/indxe.html
+++ b/indxe.html
@@ -49,7 +49,7 @@
         <section class="hero-section" >
             <div class="section-content">
                 <div class="hero-details">
-                    <h2 class="title">Best Coffee</h2>
+                    <h2 class="title">نحوي ذكرى وماجورها</h2>
                     <h3 class="subtitle">Make your day great with our special coffee!</h3>
                     <p class="description">Welcome to our coffee paradise, where every
                         bean tells a story and every cup sparks joy.</p>
@@ -260,4 +260,5 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
